--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background: linear-gradient(0deg, rgba(169,202,209,1) 0%, rgba(146,237,255,1) 100%);
 }
 
 .container {
@@ -80,4 +81,97 @@ input {
         height: 7em;
         margin: 2em;
     }
+}
+
+.base-container {
+    /* width: 100vw; */
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+nav {
+    width: 20vw;
+    height: 100%;
+    background: transparent linear-gradient(180deg, #179BE0 0%, #0C4E70 100%) 0% 0% no-repeat padding-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+main{
+    width: 80vw;
+}
+
+nav > img {
+    width: 80%;
+    margin: 1.5em auto;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    line-height: 2em;
+}
+
+li i {
+    font-size: 1.5em;
+}
+
+.button {
+    border: 3px solid #FFFFFF;
+    border-radius: 1em;
+    margin-left: 1em;
+    text-align: center;
+    letter-spacing: 0.6px;
+    color: #FFFFFF;
+    padding: 0.2rem;
+    width: 60%;
+}
+
+ul {
+    list-style-type: none;
+    font: normal normal normal 20px/27px Segoe UI;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    height: 100%;
+    width: calc(100% - 40px);
+    position: relative;
+    margin: 0 auto;
+    padding: 0;
+}
+
+li {
+    text-align: left;
+    color: white;
+    margin-bottom: 2em;
+}
+
+li:last-child {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.fa, 
+.fas {
+    width: 1em;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+header {
+    background: #179ADE 0% 0% no-repeat padding-box;
+    height: 15vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font: normal normal normal 70px/109px Segoe UI;
 }
