--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -43,9 +43,31 @@
                     <div class="profile-text">Name Surname</div>
                 </div>
 
-                <div class="statistics">Statisitcs</div>
+                <div class="statistics">
+                    <div class="stat-title">Statistics</div>
+                    <div class="stats">
+                        <div class="stat">Weight: </div>
+                        <div class="stat">The longest run: </div>
+                        <div class="stat">The longest bike ride: </div>
+                        <div class="stat">The longest swim distance: </div>
+                        <div class="stat">The longest plank: </div>
+                        <div class="stat">The heaviest bench press: </div>
+                    </div>
+                    <span>View more detailed statistics</span>
+                </div>
 
-                <div class="schedule">Schedule</div>
+                <div class="schedule">
+                    <div class="schedule-title">Schedule</div>
+                    <div class="days">
+                        <div class="day"></div>
+                        <div class="day"></div>
+                        <div class="day"></div>
+                        <div class="day"></div>
+                        <div class="day"></div>
+                        <div class="day"></div>
+                        <div class="day"></div>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
