--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,7 +1,7 @@
 .profile {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(7em, auto);
+    grid-auto-rows: minmax(2em, auto);
     grid-gap: 4em;
     margin: 3em;
 }
@@ -25,6 +25,8 @@
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 4;
+
+    
 }
 
 .schedule {
@@ -46,4 +48,48 @@
 
 .profile-text {
     margin-top: 2em;
+}
+
+.statistics {
+    padding: 1em;
+}
+
+.stat-title{
+    color: white;
+    font-size: 3em;
+    display: block;
+    text-align: center;
+    margin-bottom: 0.2em;
+}
+
+.stats {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(2.8em, auto);
+    grid-gap: 1em;
+}
+
+.statistics > span {
+    display: block;
+    text-align: center;
+    color: darkblue;
+}
+
+
+.schedule-title{
+    color: white;
+    font-size: 2em;
+    text-align: center;
+}
+
+.days {
+    display: flex;
+    flex-direction: row;
+}
+
+.day {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    border: 2px solid white
 }
