Added schedule design

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,7 +1,7 @@
 .profile {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(2em, auto);
+    grid-auto-rows: minmax(7em, auto);
     grid-gap: 4em;
     margin: 3em;
 }
@@ -88,8 +88,14 @@
 }
 
 .day {
-    height: 100%;
+    height: 16em;
     width: 100%;
-    background-color: black;
-    border: 2px solid white
+    background-color: rgb(50 165 221);
+    border: 2px solid gray
+}
+
+.day > .title {
+    color: white;
+    text-align: center;
+    display: block;
 }
