--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -59,13 +59,27 @@
                 <div class="schedule">
                     <div class="schedule-title">Schedule</div>
                     <div class="days">
-                        <div class="day"></div>
-                        <div class="day"></div>
-                        <div class="day"></div>
-                        <div class="day"></div>
-                        <div class="day"></div>
-                        <div class="day"></div>
-                        <div class="day"></div>
+                        <div class="day">
+                            <span class="title">Mon</span>
+                        </div>
+                        <div class="day">
+                            <span class="title">Tue</span>
+                        </div>
+                        <div class="day">
+                            <span class="title">Wed</span>
+                        </div>
+                        <div class="day">
+                            <span class="title">Thu</span>
+                        </div>
+                        <div class="day">
+                            <span class="title">Fri</span>
+                        </div>
+                        <div class="day">
+                            <span class="title">Sat</span>
+                        </div>
+                        <div class="day">
+                            <span class="title">Sun</span>
+                        </div>
                     </div>
                 </div>
             </section>
