Creating routing from lab

--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/profile.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/profile.css">
 
     <script src="https://kit.fontawesome.com/307549276f.js" crossorigin="anonymous"></script>
     <title>MY PROFILE</title>
@@ -9,7 +9,7 @@
 <body>
     <div class="base-container">
         <nav>
-            <img src="../img/logo.svg">
+            <img src="public/img/logo.svg">
             <ul>
                 <li>
                     <i class="fa-solid fa-address-card"></i>
