Made login.html responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body {
     opacity: 1;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -20,8 +20,14 @@ body {
     text-align: center;
 }
 
+.logo > img {
+    width: 90%;
+}
+
 .login-container {
     width: 50%;
+    justify-content: center;
+    display: flex;
 }
 
 form {
@@ -63,15 +69,15 @@ input {
 @media only screen and (max-device-width: 700px) {
     .container {
         flex-direction: column;
+        width: 100vw;
+        justify-content: center;
+        align-items: center;
     }
 
     * {
-        font-size: 36px;
+        font-size: 30px;
     }
 
-    .login-container, .logo {
-        width: 100%;
-    }
 
     form {
         margin: auto;
