--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>LOGIN PAGE</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 </head>
 <body>
     <div class="container">
         <div class="logo">
-            <img src="public/img/logo.svg">
+            <img src="../img/logo.svg">
         </div>
         <div class="login-container">
             <form>
