Changed schedule to planned exercises

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -29,7 +29,7 @@
     
 }
 
-.schedule {
+.planned-exercises {
     background: transparent linear-gradient(180deg, #179ADECC 0%, #1B82B8CC 100%) 0% 0% no-repeat padding-box;
 
     grid-row-start: 3;
@@ -76,26 +76,30 @@
 }
 
 
-.schedule-title{
+.planned-exercises-title{
     color: white;
     font-size: 2em;
     text-align: center;
 }
 
-.days {
+.plans {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-.day {
-    height: 16em;
-    width: 100%;
+.plans-block {
+    height: 7em;
+    width: auto;
     background-color: rgb(50 165 221);
     border: 2px solid gray
 }
 
-.day > .title {
+.plans-block > .title {
     color: white;
     text-align: center;
     display: block;
+}
+
+@media only screen and (max-device-width: 700px) {
+    
 }
