--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
-    <link rel="stylesheet" type="text/css" href="public/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/profile.css">
 
     <script src="https://kit.fontawesome.com/307549276f.js" crossorigin="anonymous"></script>
     <title>MY PROFILE</title>
@@ -9,7 +9,7 @@
 <body>
     <div class="base-container">
         <nav>
-            <img src="public/img/logo.svg">
+            <img src="../img/logo.svg">
             <ul>
                 <li>
                     <i class="fa-solid fa-address-card"></i>
@@ -56,29 +56,26 @@
                     <span>View more detailed statistics</span>
                 </div>
 
-                <div class="schedule">
-                    <div class="schedule-title">Schedule</div>
-                    <div class="days">
-                        <div class="day">
-                            <span class="title">Mon</span>
+                <div class="planned-exercises">
+                    <div class="planned-exercises-title">Planned exercises</div>
+                    <div class="plans">
+                        <div class="plans-block">
+                            <div class="title">
+                                <span class="date">Date </span>
+                                <span class="time">Time</span>
+                            </div>
                         </div>
-                        <div class="day">
-                            <span class="title">Tue</span>
+                        <div class="plans-block">
+                            <div class="title">
+                                <span class="date">Date </span>
+                                <span class="time">Time</span>
+                            </div>
                         </div>
-                        <div class="day">
-                            <span class="title">Wed</span>
-                        </div>
-                        <div class="day">
-                            <span class="title">Thu</span>
-                        </div>
-                        <div class="day">
-                            <span class="title">Fri</span>
-                        </div>
-                        <div class="day">
-                            <span class="title">Sat</span>
-                        </div>
-                        <div class="day">
-                            <span class="title">Sun</span>
+                        <div class="plans-block">
+                            <div class="title">
+                                <span class="date">Date </span>
+                                <span class="time">Time</span>
+                            </div>
                         </div>
                     </div>
                 </div>
