--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -41,9 +41,9 @@
 .profile-picture {
     background-color: gray;
     border-radius: 50%;
-    width: 5em;
-    height: 5em;
-    margin-top: 1em;
+    width: 9em;
+    height: 9em;
+    margin-top: 3em;
 }
 
 .profile-text {
@@ -100,6 +100,48 @@
     display: block;
 }
 
-@media only screen and (max-device-width: 700px) {
-    
+@media only screen and (max-device-width: 600px) {
+    .profile{
+        grid-gap: 2em;
+    }
+
+    .profile-card {
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .profile-picture {
+        width: 4em;
+        height: 4em;
+        margin-top: 1em;
+    }
+
+    .profile-text {
+
+        display: block;
+        text-align: center;
+    }
+
+    .statistics {
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .stat-title {
+        font-size: 1.5em;
+    }
+
+    .stat {
+        font-size: 0.7em;
+    }
+
+    .planned-exercises {
+        grid-row-start: 2;
+        grid-row-end: 4;
+    }
+
+    .plans-block {
+        height: 5em;
+    }
 }
+
