Changes in friends

--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: minmax(2.8em, auto);
-    grid-gap: 1em;
+    grid-gap: 6em;
+    margin: auto;
 }
 
 .friend {
@@ -10,4 +11,30 @@
     height: 10em;
     border-radius: 50%;
     background-color: black;
+}
+
+.friend-block {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-device-width: 800px) {
+    .friends-section {
+        grid-gap: 10em;
+    }
+       
+}
+
+@media only screen and (max-device-width: 600px) {
+    .friends-section {
+        grid-gap: 7em;
+    }
+    
+    .friend {
+        width: 5em;
+        height: 5em;
+    }
 }
