--- a/public/views/friends.html
+++ b/public/views/friends.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
-    <link rel="stylesheet" type="text/css" href="public/css/friends.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/friends.css">
 
     <script src="https://kit.fontawesome.com/307549276f.js" crossorigin="anonymous"></script>
     <title>FRIENDS</title>
@@ -9,7 +9,7 @@
 <body>
     <div class="base-container">
         <nav>
-            <img src="public/img/logo.svg">
+            <img src="../img/logo.svg">
             <ul>
                 <li>
                     <i class="fa-solid fa-address-card"></i>
@@ -38,12 +38,30 @@
                 Friends
             </header>
             <section class="friends-section">
-                <div class="friend"></div>
-                <div class="friend"></div>
-                <div class="friend"></div>
-                <div class="friend"></div>
-                <div class="friend"></div>
-                <div class="friend"></div>
+                <div class="friend-block">
+                    <div class="friend"></div>
+                    <span>Name Surname</span>
+                </div>
+                <div class="friend-block">
+                    <div class="friend"></div>
+                    <span>Name Surname</span>
+                </div>
+                <div class="friend-block">
+                    <div class="friend"></div>
+                    <span>Name Surname</span>
+                </div>
+                <div class="friend-block">
+                    <div class="friend"></div>
+                    <span>Name Surname</span>
+                </div>
+                <div class="friend-block">
+                    <div class="friend"></div>
+                    <span>Name Surname</span>
+                </div>
+                <div class="friend-block">
+                    <div class="friend"></div>
+                    <span>Name Surname</span>
+                </div>
             </section>
         </main>
     </div>
