--- a/public/views/exercises.html
+++ b/public/views/exercises.html
@@ -40,17 +40,11 @@
             <div class="content-block">
                 <div class="exercise-block">
                     <div class="search-bar">
-                        <select name="cars" id="cars">
-                            <option value="volvo">Volvo</option>
-                            <option value="saab">Saabaaaaaaaaaaaaaaaaaaaaa</option>
-                            <option value="opel">Opel</option>
-                            <option value="audi">Audi</option>
-                        </select>
-                        <select name="cars" id="cars">
-                            <option value="volvo">Volvo</option>
-                            <option value="saab">Saabaaaaaaaaaaaaaaaaaaaaa</option>
-                            <option value="opel">Opel</option>
-                            <option value="audi">Audi</option>
+                        <select name="exercises-type">
+                            <option value="Endurance">Endurance</option>
+                            <option value="Strength">Strength</option>
+                            <option value="Sports Training">Sports Training</option>
+                            <option value="Custom">Custom</option>
                         </select>
                         <button class="search-button">Search</button>
                         <button class="new-exercise">Add new exercise</button>
