--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -44,6 +44,9 @@
     width: 9em;
     height: 9em;
     margin-top: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-text {
