--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,3 +190,8 @@ header {
     align-items: center;
     font: normal normal normal 70px/109px Segoe UI;
 }
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
