--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ form {
 
     background: #E2E2E2ED 0% 0% no-repeat padding-box;
     border: 1px solid #707070;
-    border-radius: 78px;
+    border-radius: 75px;
     opacity: 1;
 }
 
@@ -194,4 +194,11 @@ header {
 img {
     max-width: 100%;
     max-height: 100%;
+}
+
+.no-valid {
+    border: 3px solid red;
+    border-radius: 1em;
+    box-shadow: 0 0 0.2em red;
+    outline: none;
 }
